fix(clash): move planechase behind hand cards

--- a/clash/components/Game/GameField/PlayerInterface/Hand/Hand.module.css
+++ b/clash/components/Game/GameField/PlayerInterface/Hand/Hand.module.css
@@ -8,7 +8,7 @@
   width: 100%;
   max-width: 1280px;
   margin: 0 auto 0;
-  z-index: 1;
+  z-index: 2;
   border: 2px solid transparent;
   user-select: none;
 }
